--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/dougsillars/videoUploadToDiscord#readme",
   "dependencies": {
+    "@api.video/nodejs-client": "^2.0.6",
     "@api.video/nodejs-sdk": "^1.8.5",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
